added projects new

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -38,6 +38,29 @@
     transform: scale(1.05);
   }
   
+/* For Desktop */
+.mask-gradient {
+  mask-image: linear-gradient(
+    to right,
+    transparent 5%,
+    black 20%,
+    black 80%,
+    transparent 95%
+  );
+}
+
+/* For Mobile */
+@media (max-width: 768px) {
+  .mask-gradient {
+    mask-image: linear-gradient(
+      to right,
+      transparent 10%,
+      black 30%,
+      black 70%,
+      transparent 90%
+    );
+  }
+}
 
   .dark {
     --background: 222.2 84% 4.9%;
